crates/contextdb-core/tests/fixtures/compile_fail/wallclock_into_txid.rs
use contextdb_core::{TxId, Wallclock};

fn main() {
    let w = Wallclock(1);
    let _tx: TxId = w;
}
