crates/contextdb-core/tests/fixtures/compile_fail/wallclock_into_txid.stderr
error[E0308]: mismatched types
 --> tests/fixtures/compile_fail/wallclock_into_txid.rs:5:21
  |
5 |     let _tx: TxId = w;
  |              ----   ^ expected `TxId`, found `Wallclock`
  |              |
  |              expected due to this
